# MyfirstRepository

./: .main.cpp.swp  1000-7.py  1_03_shifts.cpp  1_04_arrays_structs.cpp  A-3.py  CMakeLists.txt  MyFirstFile.md  NAMEIII.py  OneMoreFile.py  Player.hpp  SShkey  SShkey.pub  Test.py  Textures.hpp  View.hpp  adc.py  branch-how-to.md  main.cpp  map.hpp  measure.py  merge-how-to.md  some_test.cpp  tutorial.txt  Отчёт.odt
Taptap/: 1000.csv  Bubble.txt  Taptap.cpp  Taptap.sln  Taptap.vcxproj  Taptap.vcxproj.filters
Taptap/Taptap/x64/Debug/: Taptap.exe.recipe  Taptap.ilk  vc143.idb
Taptap/Taptap/x64/Debug/Taptap.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Taptap.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
